--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,8 @@ livingwp = "livingwp:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.12",
+]
