--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ name = "livingwp"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-authors = [
-    { name = "Ming", email = "ming.cheuk@elementx.ai" }
-]
+authors = [{ name = "Ming", email = "ming.cheuk@elementx.ai" }]
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "openai-agents>=0.0.17",
+]
 
 [project.scripts]
 livingwp = "livingwp:main"
@@ -15,3 +15,6 @@ livingwp = "livingwp:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = ["ruff>=0.11.12"]
