--- a/src/website/_config.yml
+++ b/src/website/_config.yml
@@ -18,15 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: AI Forum New Zealand - Generative AI Working Group
+title: Generative AI Working Group
 email: info@aiforum.org.nz
 description: >-
   A living snapshot of the Generative AI landscape in Aotearoa New Zealand.
   Content is automatically updated by LLM agents scanning for the latest news.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 theme: minima
@@ -35,7 +33,7 @@ plugins:
 
 header_pages:
   - whitepaper/index.markdown
-
+  - how-it-works.markdown
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
