--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,11 @@
 [project]
 name = "livingwp"
 version = "0.1.0"
-description = "Add your description here"
+description = "GenAI Working Group's Living Whitepaper"
 readme = "README.md"
 authors = [{ name = "Ming", email = "ming.cheuk@elementx.ai" }]
 requires-python = ">=3.10"
-dependencies = [
-    "openai-agents>=0.0.19",
-]
+dependencies = ["openai-agents>=0.0.19"]
 
 [project.scripts]
 livingwp = "livingwp:main"
