--- a/.github/workflows/run_agent.yml
+++ b/.github/workflows/run_agent.yml
@@ -3,6 +3,14 @@ name: Auto Update Articles
 on:
   workflow_dispatch: # Allow manual triggering
 
+env:
+  # This workflow sets the RESEARCH_MODEL environment variable for all jobs
+  # To change the model, edit the value below or set it as a secret
+  #
+  # Example: RESEARCH_MODEL: o4-mini-deep-research
+  #
+  RESEARCH_MODEL: gpt-4.1-mini
+
 jobs:
   update-articles:
     runs-on: ubuntu-latest
