--- a/.github/workflows/deploy_website.yml
+++ b/.github/workflows/deploy_website.yml
@@ -4,12 +4,14 @@
 # documentation.
 
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll site to Pages
+name: Deploy website to Github Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pushes targeting the default branch, but only for changes in src/website
   push:
     branches: ["main"]
+    paths:
+      - "src/website/**"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
