feat: Trigger on changes to file itself

--- a/.github/workflows/deploy_website.yml
+++ b/.github/workflows/deploy_website.yml
@@ -7,11 +7,12 @@
 name: Deploy website to Github Pages
 
 on:
-  # Runs on pushes targeting the default branch, but only for changes in src/website
+  # Runs on pushes targeting the default branch, but only for changes in src/website or this workflow file
   push:
     branches: ["main"]
     paths:
       - "src/website/**"
+      - ".github/workflows/deploy_website.yml"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
