--- a/src/website/_config.yml
+++ b/src/website/_config.yml
@@ -18,11 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Generative AI Working Group
+title: AI in NZ Living Whitepaper
 email: info@aiforum.org.nz
 description: >-
-  A living snapshot of the Generative AI landscape in Aotearoa New Zealand.
-  Content is automatically updated by LLM agents scanning for the latest news.
+  A living snapshot of the Generative AI landscape in Aotearoa New Zealand. Researching AI topics, using AI, for the AI community.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -34,6 +33,7 @@ plugins:
 header_pages:
   - whitepaper/index.markdown
   - how-it-works.markdown
+  - about.markdown
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
